Fixed shopping items to work static

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
+    // For cart
+    implementation 'io.paperdb:paperdb:2.6'
 
 }
