--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
 
     apply plugin: 'kotlin-android-extensions'
 
+    // For toasts
+    implementation 'com.github.Spikeysanju:MotionToast:1.3.3.4'
+
 }
