--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application xmlns:tools="http://schemas.android.com/tools"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CUTNMobileApp"
-        tools:replace="android:theme">
+        tools:replace="android:theme,android:allowBackup">
+
         <activity android:name=".Classifier"></activity>
         <activity android:name=".IndividualProduct" />
         <activity android:name=".Rewards" />
