--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources true
+            minifyEnabled true
         }
     }
     compileOptions {
