--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,12 @@
 
     <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/trolley_icon"
+        android:label="CUTN Grocery"
+        android:roundIcon="@mipmap/trolley_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CUTNMobileApp"
-        tools:replace="android:theme,android:allowBackup">
+        tools:replace="android:label,android:icon,android:theme,android:allowBackup">
 
         <activity android:name=".Classifier"></activity>
         <activity android:name=".IndividualProduct" />
